# Authz

./: README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: publish.yml  python-publish.yml
authz/: __init__.py  core.py
tests/: test_authz.py
