---

### 6. âš™ï¸ `setup.cfg`

```ini
[metadata]
name = AuthZ
version = 0.1.1
author = Creative Demon
description = A module to verify bot authorization from external API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CreativeDemon/AuthZ
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests